# MikrotikAPI-BF

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_v1.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README (1).md  README.md  README.pt-BR.md  SECURITY.md  VERBOSE_GUIDE.md  _api.py  _cli.py  _cli_ui.py  _discovery.py  _export.py  _fingerprint.py  _log.py  _progress.py  _proxy.py  _reports.py  _retry.py  _session.py  _stealth.py  _wordlists.py  combo.txt  config.yaml.example  install-python-3.12.ps1  install-python-3.12.sh  install-v2.1.sh  labs_mikrotik_pass.lst.txt  labs_users.lst.txt  mikrotik-discovery.py  mikrotikapi-bf-v1.2.py  mikrotikapi-bf-v1.3.py  mikrotikapi-bf-v1.4.py  mikrotikapi-bf-v1.5.py  mikrotikapi-bf-v1.6.py  (+12 more)
.github/workflows/: codeql.yml  publish-pypi.yml  publish-testpypi.yml  secret-scan.yml
WordListsForHacking-main/: README.md
core/: __init__.py  api.py  apiros_client.py  attack_runner.py  cli.py  console.py  escape.py  export.py  interactive_menu.py  lab_wordlists.py  log.py  progress.py  retry.py  security.py  session.py  wordlist_order.py
docs/: API_REFERENCE.md  AUDIT_REPORT.md  CHANGELOG.md  FEATURES.md  INSTALLATION.md  QUICKSTART.md  README.md  RELEASE_NOTES_v3.6.0.md  USAGE_EXAMPLES.md  VERBOSE_GUIDE.md  WIKI.md  index.html  mikrotik_cves_inventory_2026-03-28.csv  mikrotik_cves_poc_publica_2026-03-28.md
examples/: README.md  combos.txt  example_basic.sh  example_discovery.sh  example_stealth.sh  example_validation.sh  example_wordlist.sh  passwords.txt  usernames.txt
mikrotikapi_bf/: __init__.py  cli.py  nse_installer.py
modules/: __init__.py  cli_timing_oracle.py  decoder.py  discovery.py  fingerprint.py  hardening_check.py  mac_server.py  privilege_escalation.py  proxy.py  reports.py  snmp.py  ssh_audit.py  stealth.py  supout_codec.py  timing_oracle.py  web_security.py  winbox_auth.py  wordlists.py
modules/winbox/: __init__.py  ec_srp5_client.py
nse/: README.md  broadcast-mndp-discover.nse  mikrotik-api-brute.nse  mikrotik-api-info.nse  mikrotik-default-creds.nse  mikrotik-routeros-brute.nse  mikrotik-routeros-username-brute.nse  mikrotik-routeros-version.nse  mikrotik-winbox-cve-2018-14847.nse
scripts/: publish-pypi.ps1  publish-pypi.sh
test_results/: mikrotik_test_targets_20251005_215941.json  mikrotik_test_targets_20251005_215941.txt  mikrotik_test_targets_20251005_215941.xml  mikrotik_test_targets_20251005_220048.json  mikrotik_test_targets_20251005_220048.txt  mikrotik_test_targets_20251005_220048.xml  mikrotik_test_targets_20251005_220155.csv  mikrotik_test_targets_20251005_220155.json  mikrotik_test_targets_20251005_220155.txt  mikrotik_test_targets_20251005_220155.xml
tools/: __init__.py  binary_analysis.py
wordlists/: combo-userpass.lst  labs_mikrotik_pass.lst  labs_passwords.lst  labs_users.lst  username_br.lst  wlist_brasil.lst
xpl/: __init__.py  auditor.py  cve_db.py  cve_extended.py  exploits.py  foisted.py  jailbreak.py  npk_decoder.py  npk_tools.py  nvd_shodan.py  offline_analyzer.py  poc_engine.py  poc_payloads.py  reproducible_catalog.py  scanner.py
