[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mikrotikapi-bf"
version = "3.10.0"
description = "RouterOS Attack & Exploitation Framework — 100 CVE/EDB exploits, 8-phase audit, credential brute-force, SARIF export"
readme = "README.md"
license = "MIT"
authors = [
  { name = "André Henrique", email = "mrhenrike@users.noreply.github.com" }
]
maintainers = [
  { name = "André Henrique", email = "mrhenrike@users.noreply.github.com" }
]
keywords = [
  "mikrotik", "routeros", "brute-force", "security", "pentest",
  "cve", "exploit", "iot", "nmap", "nse", "network-security"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Networking :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
  "requests>=2.28.0",
  "urllib3>=1.26.0",
  "colorama>=0.4.6",
  "paramiko>=2.7.0",
  "PySocks>=1.7.1",
  "PyYAML>=6.0",
  "beautifulsoup4>=4.12.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "black",
  "isort",
  "flake8",
]

[project.urls]
Homepage       = "https://github.com/mrhenrike/MikrotikAPI-BF"
Repository     = "https://github.com/mrhenrike/MikrotikAPI-BF"
Documentation  = "https://github.com/mrhenrike/MikrotikAPI-BF/wiki"
"Bug Tracker"  = "https://github.com/mrhenrike/MikrotikAPI-BF/issues"
Changelog      = "https://github.com/mrhenrike/MikrotikAPI-BF/releases"

[project.scripts]
# After `pip install mikrotikapi-bf`, these commands become available:
mikrotikapi-bf         = "mikrotikapi_bf.cli:main"
mikrotik-bf            = "mikrotikapi_bf.cli:main"
mikrotikapi-install-nse = "mikrotikapi_bf.nse_installer:install_nse_cli"

[tool.setuptools]
# Include non-Python files in the package
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "xpl*", "tools*", "mikrotikapi_bf*"]
exclude = ["tests*", "docs*", ".log*", "dist*", "build*"]

[tool.setuptools.package-data]
"*" = [
  "nse/*.nse",
  "nse/README.md",
  "examples/*.sh",
  "examples/*.txt",
  "examples/README.md",
  "config.yaml.example",
  ".env.example",
  "version.py",
  "setup.py",
]
